@@ -2,6 +2,7 @@
 - Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units
 - Fix dont_escort_unflagged_units option interfering with group movement of units
 - Put right-click menu sword icon on non-empty armies
+- Describe the action of passenger units as "Transported" instead of "Fortified"
 
 * RELEASE 18B
 - Fix Wake/Activate replacement not working on Steam version
